flushed out more of deed panel, added Button common component

--- a/src/components/CharacterPanel.scss
+++ b/src/components/CharacterPanel.scss
@@ -5,9 +5,14 @@
 .character-list-item {
     list-style: none;
     background-color: red;
+    float: left;
+    margin: 5px;
 }
 
 .character {
     background-color: orange;
 }
-    
+
+.add-character-button{
+    height: 50px;
+}
