improved store, added SelectObject component, added constants

--- a/src/components/CharacterPanel.css
+++ b/src/components/CharacterPanel.css
@@ -8,7 +8,8 @@
   margin: 5px; }
 
 .character {
-  background-color: orange; }
+  background-color: orange;
+  display: block; }
 
 .add-character-button {
   height: 50px; }
