--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
+* {
+  border: 1px black solid; }
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif; }
-
-/*# sourceMappingURL=index.css.map */
