--- a/src/common.scss
+++ b/src/common.scss
@@ -1,3 +1,10 @@
 // all common css tags
 
 $fg-color: rgba(58, 58, 58, 0.788);
+
+.panel{
+    margin-top: 5px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
