--- a/src/components/CharacterPanel.scss
+++ b/src/components/CharacterPanel.scss
@@ -1,19 +1,28 @@
+@import './../common.scss';
+
+.character-panel{
+
+}
+
 .character-list{
-    display: inline-block;
+    // display: inline-block;
+    padding: 0px;
 }
 
 .character-list-item {
     list-style: none;
-    background-color: red;
-    float: left;
     margin: 5px;
+    display: inline-flex;
 }
 
 .character {
-    background-color: orange;
-    display: block;
+    // background-color: orange;
+    // text-align: left;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 5px;
 }
 
 .add-character-button{
-    height: 50px;
+    // height: 50px;
 }
