--- a/src/components/LotroApp.css
+++ b/src/components/LotroApp.css
@@ -1,5 +1,8 @@
+.panel {
+  margin-top: 5px;
+  border: 1px solid black;
+  border-radius: 5px; }
+
 .lotro-app {
   text-align: center;
   color: rgba(58, 58, 58, 0.788); }
-
-/*# sourceMappingURL=LotroApp.css.map */
