--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
-* {
-  border: 1px black solid; }
+.panel {
+  margin-top: 5px;
+  border: 1px solid black;
+  border-radius: 5px; }
+
+@font-face {
+  font-family: 'lotro';
+  src: url("./lotro.woff") format("woff"); }
 
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif; }
+  font-family: 'lotro', sans-serif; }
