--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,16 @@
-*{
-  border: 1px black solid;
+@import './common.scss';
+
+// *{
+//   border: 0.5px black solid;
+// }
+
+@font-face {
+  font-family: 'lotro';
+  src: url('./lotro.woff') format('woff');
 }
 
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'lotro', sans-serif;
 }
