added in selection capability for deeds and characters, allowed deeds to be completed

--- a/src/components/DeedPanel.scss
+++ b/src/components/DeedPanel.scss
@@ -16,6 +16,11 @@
     background-color: rgb(247, 226, 181);
 }
 
+.deed.selected{
+  border: 2px solid #28a745;
+  box-shadow: 0px 0px 10px #28a745;
+}
+
 .deed-panel-right{
     // float:left;
     margin: 5px;
@@ -23,6 +28,11 @@
     border-radius: 5px;
     border: 2px solid rgb(143, 118, 65);
     background-color: rgb(247, 226, 181);
+}
+
+.deed-panel-right.completed{
+  border: 2px solid #28a745;
+  box-shadow: 0px 0px 10px #28a745;
 }
 
 .deed-list{
