--- a/src/components/CharacterPanel.css
+++ b/src/components/CharacterPanel.css
@@ -12,6 +12,10 @@
   display: inline-flex; }
 
 .character {
-  border: 1px solid black;
+  border: 2px solid black;
   border-radius: 5px;
   padding: 5px; }
+
+.character.selected {
+  border: 2px solid #28a745;
+  box-shadow: 0px 0px 10px #28a745; }
