--- a/src/components/CharacterPanel.scss
+++ b/src/components/CharacterPanel.scss
@@ -18,9 +18,14 @@
 .character {
     // background-color: orange;
     // text-align: left;
-    border: 1px solid black;
+    border: 2px solid black;
     border-radius: 5px;
     padding: 5px;
+}
+
+.character.selected{
+  border: 2px solid #28a745;
+  box-shadow: 0px 0px 10px #28a745;
 }
 
 .add-character-button{
