--- a/src/components/DeedPanel.css
+++ b/src/components/DeedPanel.css
@@ -13,12 +13,20 @@
   border-radius: 5px;
   background-color: #f7e2b5; }
 
+.deed.selected {
+  border: 2px solid #28a745;
+  box-shadow: 0px 0px 10px #28a745; }
+
 .deed-panel-right {
   margin: 5px;
   padding: 2px;
   border-radius: 5px;
   border: 2px solid #8f7641;
   background-color: #f7e2b5; }
+
+.deed-panel-right.completed {
+  border: 2px solid #28a745;
+  box-shadow: 0px 0px 10px #28a745; }
 
 .deed-list {
   padding: 0px;
