Store now commits and dispatches updates on an interval moved all state into LotroApp which is modified via Store callbacks all state update actions in DeedPanel and LotroApp are now Store issue_actions added new action types to enable the above changesx

--- a/src/components/DeedPanel.scss
+++ b/src/components/DeedPanel.scss
@@ -48,4 +48,10 @@
     margin: 0px;
     padding: 5px;
     text-align: left;
+    height: 100%;
+}
+
+.deed-completed-btn{
+    position: absolute;
+    bottom: 7px;
 }
