--- a/src/components/DeedPanel.css
+++ b/src/components/DeedPanel.css
@@ -38,4 +38,9 @@
 .deed-details-panel {
   margin: 0px;
   padding: 5px;
-  text-align: left; }
+  text-align: left;
+  height: 100%; }
+
+.deed-completed-btn {
+  position: absolute;
+  bottom: 7px; }
