--- a/src/components/CharacterPanel.scss
+++ b/src/components/CharacterPanel.scss
@@ -5,7 +5,6 @@
 }
 
 .character-list{
-    // display: inline-block;
     padding: 0px;
 }
 
@@ -16,8 +15,6 @@
 }
 
 .character {
-    // background-color: orange;
-    // text-align: left;
     border: 2px solid black;
     border-radius: 5px;
     padding: 5px;
@@ -30,4 +27,51 @@
 
 .add-character-button{
     // height: 50px;
+}
+
+@supports (display: grid) {
+  @media screen and (min-width: 800px) {
+    
+  	.site {
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+      grid-template-rows: auto 1fr 3fr;
+      grid-template-areas:
+        "content-head content-head"
+        "main header"
+        "main sidebar"
+        "footer footer";
+		}
+    
+    .masthead {
+      grid-area: header;
+    }
+    
+    .page-title {
+      grid-area: content-head;
+    }
+    
+    .main-content {
+      grid-area: main;
+    }
+    
+    .sidebar {
+      grid-area: sidebar;
+    }
+		
+    .colophon {
+      grid-area: footer;
+    }
+    
+	}
+  
+  @media screen and (min-width: 1200px) {
+    .site {
+			grid-template-columns: 2fr 1fr 1fr;
+      grid-template-areas:
+        "content-head content-head content-head"
+        "main header header"
+        "main sidebar footer";
+		}
+  }
 }
