--- a/src/components/CharacterPanel.scss
+++ b/src/components/CharacterPanel.scss
@@ -18,11 +18,42 @@
     border: 2px solid black;
     border-radius: 5px;
     padding: 5px;
+    width: 250px;
 }
 
 .character.selected{
   border: 2px solid #28a745;
   box-shadow: 0px 0px 10px #28a745;
+}
+
+.character-form-div{
+  display: inline-flex;
+  vertical-align: middle;
+  text-align: left;
+  margin: 5px;
+  width: 220px;
+}
+
+.character-form{
+  width: 120px;
+  padding: 5px;
+  margin: 0px;
+  border: 1px solid $fg-color;
+  border-radius: 3px;
+}
+
+select.character-form{
+  width: 132px;
+}
+
+button.character-form{
+  margin: auto;
+}
+
+.character-label{
+  vertical-align: middle;
+  width: 75px;
+  padding: 5px;
 }
 
 .add-character-button{
