--- a/src/common.scss
+++ b/src/common.scss
@@ -1,11 +1,20 @@
 // all common css tags
 
 $fg-color: rgba(58, 58, 58, 0.788);
+$bg-color: rgb(255, 249, 238);
+$shadow: rgba(156, 156, 156, 0.788);
+$border: rgb(143, 118, 65);
 
 .panel{
-    margin-top: 5px;
-    border: 1px solid black;
+    margin: 10px 10px;
+    border: 1px solid $border;
     border-radius: 5px;
+    background-color: white;
+    box-shadow: 0px 5px 5px $shadow;
+}
+
+.panel-header{
+  font-size: 1.75em;
 }
 
 .btn{
