--- a/src/components/DeedPanel.scss
+++ b/src/components/DeedPanel.scss
@@ -1,6 +1,37 @@
 @import './../common.scss';
 
+$deed-fg: rgb(143, 118, 65);
+$deed-bg: rgb(247, 226, 181);
+$highlight: #28a745;
+
 .deed-panel{
+}
+
+.deed-nav{
+  width: auto;
+  margin: 5px;
+  padding: 0px;
+  font-size:  1.2em;
+}
+
+.deed-nav-item{
+  display: inline-flex;
+  list-style: none;
+  vertical-align: middle;
+}
+
+.deed-nav-link{
+  margin: 5px 5px;
+  padding: 10px 10px;
+  border: 2px solid $deed-fg;
+  border-radius: 5px;
+  color: $fg-color;
+  background-color: $deed-bg;
+}
+
+.deed-nav-link.active{
+  border: 2px solid $highlight;
+  box-shadow: 0px 0px 15px $highlight;
 }
 
 .deed-panel-left{
