--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,8 @@
 //   border: 0.5px black solid;
 // }
 
+
+
 @font-face {
   font-family: 'lotro';
   src: url('./lotro.woff') format('woff');
@@ -13,4 +15,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'lotro', sans-serif;
+  background-color: $bg-color;
 }
