--- a/src/common.scss
+++ b/src/common.scss
@@ -4,6 +4,8 @@ $fg-color: rgba(58, 58, 58, 0.788);
 $bg-color: rgb(255, 249, 238);
 $shadow: rgba(156, 156, 156, 0.788);
 $border: rgb(143, 118, 65);
+$success: rgb(64, 173, 42);
+$primary: rgb(60, 109, 255);
 
 .panel{
     margin: 10px 10px;
@@ -18,6 +20,22 @@ $border: rgb(143, 118, 65);
 }
 
 .btn{
-  
+  width: 120px;
+  padding: 5px;
+  margin: 0px;
+  border: 1px solid $fg-color;
+  border-radius: 3px;
+}
+
+.btn-success{
+  background-color: $success;
+  color:white;
+  border: 1px solid $success;
+}
+
+.btn-primary{
+  background-color: $primary;
+  color:white;
+  border: 1px solid $primary;
 }
 
