--- a/src/components/DeedPanel.css
+++ b/src/components/DeedPanel.css
@@ -8,6 +8,23 @@
 .panel-header {
   font-size: 1.75em; }
 
+.btn {
+  width: 120px;
+  padding: 5px;
+  margin: 0px;
+  border: 1px solid rgba(58, 58, 58, 0.788);
+  border-radius: 3px; }
+
+.btn-success {
+  background-color: #40ad2a;
+  color: white;
+  border: 1px solid #40ad2a; }
+
+.btn-primary {
+  background-color: #3c6dff;
+  color: white;
+  border: 1px solid #3c6dff; }
+
 .deed-nav {
   width: auto;
   margin: 5px;
@@ -45,16 +62,24 @@
   border: 2px solid #28a745;
   box-shadow: 0px 0px 10px #28a745; }
 
-.deed-panel-right {
+.deed-details {
   margin: 5px;
-  padding: 2px;
+  padding: 5px;
   border-radius: 5px;
   border: 2px solid #8f7641;
-  background-color: #f7e2b5; }
+  background-color: #f7e2b5;
+  text-align: left; }
 
-.deed-panel-right.completed {
+.deed-details.completed {
   border: 2px solid #28a745;
   box-shadow: 0px 0px 10px #28a745; }
+
+.deed-stats {
+  display: inline-flex;
+  margin: 5px;
+  padding: 5px 10px;
+  border: 1px solid #8f7641;
+  border-radius: 3px; }
 
 .deed-list {
   padding: 0px;
@@ -63,13 +88,8 @@
 .deed-list-item {
   list-style: none; }
 
-.deed-details-panel {
-  margin: 0px;
-  padding: 5px;
-  text-align: left;
-  height: 100%; }
-
 .deed-completed-btn {
+  display: block;
   bottom: 7px; }
 
 .clickable {
