--- a/src/components/DeedPanel.scss
+++ b/src/components/DeedPanel.scss
@@ -52,39 +52,41 @@ $highlight: #28a745;
   box-shadow: 0px 0px 10px #28a745;
 }
 
-.deed-panel-right{
+.deed-details{
     // float:left;
     margin: 5px;
-    padding: 2px;
+    padding: 5px;
     border-radius: 5px;
     border: 2px solid rgb(143, 118, 65);
     background-color: rgb(247, 226, 181);
+    text-align: left;
 }
 
-.deed-panel-right.completed{
+.deed-details.completed{
   border: 2px solid #28a745;
   box-shadow: 0px 0px 10px #28a745;
 }
 
+.deed-stats{
+  display: inline-flex;
+  margin: 5px;
+  padding: 5px 10px;
+  border: 1px solid $deed-fg;
+  border-radius: 3px;
+}
+
 .deed-list{
-    padding:0px;
-    margin: 0px;
+  padding:0px;
+  margin: 0px;
 }
 
 .deed-list-item{
-    list-style: none;
-}
-
-.deed-details-panel{
-    margin: 0px;
-    padding: 5px;
-    text-align: left;
-    height: 100%;
+  list-style: none;
 }
 
 .deed-completed-btn{
-    // position: absolute;
-    bottom: 7px;
+  display: block;
+  bottom: 7px;
 }
 
 .clickable{
