--- a/src/common.css
+++ b/src/common.css
@@ -1,19 +1,21 @@
 .panel {
   margin: 10px 10px;
-  border: 1px solid #8f7641;
-  border-radius: 5px;
   background-color: white;
-  box-shadow: 0px 5px 5px rgba(156, 156, 156, 0.788); }
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28); }
 
 .panel-header {
   font-size: 1.75em; }
+
+.clickable {
+  cursor: pointer; }
 
 .btn {
   width: 120px;
   padding: 5px;
   margin: 0px;
   border: 1px solid rgba(58, 58, 58, 0.788);
-  border-radius: 3px; }
+  border-radius: 3px;
+  font-family: lotro; }
 
 .btn-success {
   background-color: #40ad2a;
