--- a/src/components/CharacterPanel.scss
+++ b/src/components/CharacterPanel.scss
@@ -19,15 +19,17 @@
 }
 
 .character {
-    border: 2px solid black;
-    border-radius: 5px;
+    // border: 2px solid black;
+    // border-radius: 5px;
     padding: 5px;
     width: 250px;
+    box-shadow: 0 0 2px rgba(0,0,0,.24), 0 2px 4px rgba(0,0,0,.48);
 }
 
 .character.selected{
-  border: 2px solid #28a745;
-  box-shadow: 0px 0px 10px #28a745;
+  // border: 2px solid #28a745;
+  // box-shadow: 0px 0px 10px #28a745;
+  box-shadow: 0px 0px 2px rgba(40, 167, 69, 1), 0 2px 4px rgba(40, 167, 69,.24), 0 4px 6px rgba(40, 167, 69,.48);
 }
 
 .character-form-div{
