--- a/src/components/DeedPanel.scss
+++ b/src/components/DeedPanel.scss
@@ -40,31 +40,35 @@ $highlight: #28a745;
 }
 
 .deed{
-    margin-bottom: 5px;
+    margin-bottom: 8px;
     padding: 2px;
-    border: 2px solid rgb(143, 118, 65);
-    border-radius: 5px;
+    // border: 2px solid rgb(143, 118, 65);
+    // border-radius: 5px;
     background-color: rgb(247, 226, 181);
+    box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0,0,0,.12), 0 2px 4px rgba(0,0,0,.24);
+    
 }
 
 .deed.selected{
-  border: 2px solid #28a745;
-  box-shadow: 0px 0px 10px #28a745;
+  // border: 1px solid #28a745;
+  // box-shadow: 0 0 0
+  box-shadow: 0px 0px 2px rgba(40, 167, 69, 1), 0 2px 4px rgba(40, 167, 69,.24), 0 4px 6px rgba(40, 167, 69,.48);
 }
 
 .deed-details{
     // float:left;
     margin: 5px;
     padding: 5px;
-    border-radius: 5px;
-    border: 2px solid rgb(143, 118, 65);
+    // border-radius: 5px;
+    // border: 2px solid rgb(143, 118, 65);
     background-color: rgb(247, 226, 181);
     text-align: left;
+    box-shadow: 0 0 2px rgba(0,0,0,.12), 0 2px 4px rgba(0,0,0,.24);
 }
 
 .deed-details.completed{
-  border: 2px solid #28a745;
-  box-shadow: 0px 0px 10px #28a745;
+  // border: 2px solid #28a745;
+  box-shadow: 0px 0px 2px rgba(40, 167, 69, 1), 0 2px 4px rgba(40, 167, 69,.24), 0 4px 6px rgba(40, 167, 69,.48);
 }
 
 .deed-stats{
@@ -89,6 +93,3 @@ $highlight: #28a745;
   bottom: 7px;
 }
 
-.clickable{
-  cursor: pointer;
-}
