--- a/src/common.scss
+++ b/src/common.scss
@@ -8,18 +8,15 @@ $success: rgb(64, 173, 42);
 $primary: rgb(60, 109, 255);
 
 .panel{
-    margin: 10px 10px;
-    // border: 1px solid $border;
-    // border-radius: 5px;
-    background-color: white;
-    // box-shadow: 0px 5px 5px $shadow;
-    // box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0,0,0,.12), 0 2px 4px rgba(0,0,0,.24);
-    box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.28);
-
+  margin: 10px 10px;
+  background-color: white;
+  box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.28);
+  padding: 5px;
 }
 
 .panel-header{
   font-size: 1.75em;
+  margin: 5px;
 }
 
 .clickable{
@@ -46,4 +43,6 @@ $primary: rgb(60, 109, 255);
   color:white;
   border: 1px solid $primary;
 }
+
+button:focus {outline:0;}
 
