--- a/src/components/CharacterPanel.scss
+++ b/src/components/CharacterPanel.scss
@@ -9,27 +9,24 @@
 }
 
 .character-list{
-    padding: 0px;
+  padding: 0px;
 }
 
 .character-list-item {
-    list-style: none;
-    margin: 5px;
-    display: inline-flex;
+  list-style: none;
+  margin: 5px;
+  display: inline-flex;
 }
 
 .character {
-    // border: 2px solid black;
-    // border-radius: 5px;
-    padding: 5px;
-    width: 250px;
-    box-shadow: 0 0 2px rgba(0,0,0,.24), 0 2px 4px rgba(0,0,0,.48);
+  margin: 5px;
+  padding: 5px;
+  width: 250px;
+  box-shadow: 0 0px 2px rgba(127, 127, 127, 1), 0 2px 4px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.24);
 }
 
 .character.selected{
-  // border: 2px solid #28a745;
-  // box-shadow: 0px 0px 10px #28a745;
-  box-shadow: 0px 0px 2px rgba(40, 167, 69, 1), 0 2px 4px rgba(40, 167, 69,.24), 0 4px 6px rgba(40, 167, 69,.48);
+  box-shadow: 0px 0px 6px rgba(40, 167, 69, 1), 0 2px 8px rgba(19,82,34,.24), 0 4px 10px rgba(19,82,34,.48);
 }
 
 .character-form-div{
