--- a/src/components/DeedPanel.scss
+++ b/src/components/DeedPanel.scss
@@ -23,15 +23,17 @@ $highlight: #28a745;
 .deed-nav-link{
   margin: 5px 5px;
   padding: 10px 10px;
-  border: 2px solid $deed-fg;
-  border-radius: 5px;
+  // border: 2px solid $deed-fg;
+  // border-radius: 5px;
   color: $fg-color;
   background-color: $deed-bg;
+  box-shadow: 0 0px 2px rgba(127, 127, 127, 1), 0 2px 4px rgba(0,0,0,.12), 0 4px 6px rgba(0,0,0,.24); 
 }
 
 .deed-nav-link.active{
-  border: 2px solid $highlight;
-  box-shadow: 0px 0px 15px $highlight;
+  // border: 2px solid $highlight;
+  // box-shadow: 0px 0px 15px $highlight;
+  box-shadow: 0px 0px 6px rgba(40, 167, 69, 1), 0 2px 8px rgba(19,82,34,.24), 0 4px 10px rgba(19,82,34,.48);
 }
 
 .deed-panel-left{
@@ -45,14 +47,14 @@ $highlight: #28a745;
     // border: 2px solid rgb(143, 118, 65);
     // border-radius: 5px;
     background-color: rgb(247, 226, 181);
-    box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0,0,0,.12), 0 2px 4px rgba(0,0,0,.24);
+    box-shadow: 0 0px 2px rgba(127, 127, 127, 1), 0 2px 4px rgba(0,0,0,.12), 0 4px 6px rgba(0,0,0,.24);
     
 }
 
 .deed.selected{
   // border: 1px solid #28a745;
   // box-shadow: 0 0 0
-  box-shadow: 0px 0px 2px rgba(40, 167, 69, 1), 0 2px 4px rgba(40, 167, 69,.24), 0 4px 6px rgba(40, 167, 69,.48);
+  box-shadow: 0px 0px 6px rgba(40, 167, 69, 1), 0 2px 8px rgba(19,82,34,.24), 0 4px 10px rgba(19,82,34,.48);
 }
 
 .deed-details{
@@ -63,20 +65,19 @@ $highlight: #28a745;
     // border: 2px solid rgb(143, 118, 65);
     background-color: rgb(247, 226, 181);
     text-align: left;
-    box-shadow: 0 0 2px rgba(0,0,0,.12), 0 2px 4px rgba(0,0,0,.24);
+    box-shadow:  0 0 2px rgba(127, 127, 127, 1), 0 2px 4px rgba(0, 0, 0, .12), 0 4px 6px rgba(0, 0, 0, .24);
 }
 
 .deed-details.completed{
   // border: 2px solid #28a745;
-  box-shadow: 0px 0px 2px rgba(40, 167, 69, 1), 0 2px 4px rgba(40, 167, 69,.24), 0 4px 6px rgba(40, 167, 69,.48);
+  box-shadow: 0 0 6px rgba(40, 167, 69, 1), 0 2px 8px rgba(19,82,34,.24), 0 4px 10px rgba(19,82,34,.48);
 }
 
 .deed-stats{
   display: inline-flex;
   margin: 5px;
   padding: 5px 10px;
-  border: 1px solid $deed-fg;
-  border-radius: 3px;
+  box-shadow: 0 0 1px $deed-fg;
 }
 
 .deed-list{
