--- a/src/components/CharacterPanel.css
+++ b/src/components/CharacterPanel.css
@@ -69,8 +69,8 @@ button:focus {
   width: 120px;
   padding: 5px;
   margin: 0px;
-  border: 1px solid rgba(58, 58, 58, 0.788);
-  border-radius: 3px; }
+  border: none;
+  border-bottom: 2px solid rgba(156, 156, 156, 0.788); }
 
 select.character-form {
   width: 132px; }
@@ -89,7 +89,7 @@ button.character-form {
       display: grid;
       grid-template-columns: 1fr 1fr;
       grid-template-rows: auto 1fr 3fr;
-      grid-template-areas: "content-head content-head" "main header" "main sidebar" "footer footer"; }
+      grid-template-areas: "content-head content-head" "main header" "main sidebar" "footer footer"; }
     .masthead {
       grid-area: header; }
     .page-title {
@@ -103,4 +103,4 @@ button.character-form {
   @media screen and (min-width: 1200px) {
     .site {
       grid-template-columns: 2fr 1fr 1fr;
-      grid-template-areas: "content-head content-head content-head" "main header header" "main sidebar footer"; } } }
+      grid-template-areas: "content-head content-head content-head" "main header header" "main sidebar footer"; } } }
