inital summary panel work, character idb saving work, better modal support

--- a/src/common.scss
+++ b/src/common.scss
@@ -7,6 +7,9 @@ $border: rgb(143, 118, 65);
 $success: rgb(64, 173, 42);
 $primary: rgb(60, 109, 255);
 $danger: rgb(192, 61, 61);
+$deed-fg: rgb(143, 118, 65);
+$deed-bg: rgb(247, 226, 181);
+$highlight: #28a745;
 
 .panel{
   margin: 10px 10px;
