--- a/src/common.scss
+++ b/src/common.scss
@@ -10,6 +10,7 @@ $danger: rgb(192, 61, 61);
 $deed-fg: rgb(143, 118, 65);
 $deed-bg: rgb(247, 226, 181);
 $highlight: #28a745;
+$light: rgba(200, 200, 200, 1);
 
 .panel{
   margin: 10px 10px;
@@ -28,13 +29,17 @@ $highlight: #28a745;
 }
 
 .btn{
-  width: 120px;
+  width: 130px;
+  // height: 44px;
   padding: 5px;
-  margin: 2px;
-  border: 1px solid $shadow;
+  margin: 5px;
+  border: 1px solid $light;
   border-radius: 2px;
   font-family: lotro;
-  background-color: $shadow;
+  font-size: .9em;
+  font-weight: bold;
+  background-color: $light;
+  cursor: pointer;
 }
 
 .btn-success{
@@ -57,6 +62,19 @@ $highlight: #28a745;
 
 button:focus {outline:0;}
 
+input[type="file"] {
+    display: none;
+}
+
+.modal-load-label{
+  display: inline-block;
+  padding: 5px;
+  margin: 5px;
+  width: 118px;
+  text-align: center;
+  border: 1px solid $light;
+}
+
 .modal{
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -70,9 +88,26 @@ button:focus {outline:0;}
 }
 
 .modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  background-color: white;
+  margin: 15% auto;
   padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  // border: 1px solid #888;
+  width: 80%;
+  outline: none;
+}
+
+@media screen and (min-width: 500px) {
+  .modal-content {
+    background-color: white;
+    margin: 15% auto;
+    padding: 20px;
+    // border: 1px solid #888;
+    width: 400px;
+    outline: none;
+  }
+}
+
+
+.pull-right{
+  float: right;
 }
