--- a/src/components/CharacterPanel.scss
+++ b/src/components/CharacterPanel.scss
@@ -1,5 +1,9 @@
 @import './../common.scss';
 
+.character-panel{
+  grid-area: character;
+}
+
 .character-actions{
   display:block;
 }
@@ -59,51 +63,4 @@ button.character-form{
 
 .add-character-button{
     // height: 50px;
-}
-
-@supports (display: grid) {
-  @media screen and (min-width: 800px) {
-
-  	.site {
-			display: grid;
-			grid-template-columns: 1fr 1fr;
-      grid-template-rows: auto 1fr 3fr;
-      grid-template-areas:
-        "content-head content-head"
-        "main header"
-        "main sidebar"
-        "footer footer";
-		}
-
-    .masthead {
-      grid-area: header;
-    }
-
-    .page-title {
-      grid-area: content-head;
-    }
-
-    .main-content {
-      grid-area: main;
-    }
-
-    .sidebar {
-      grid-area: sidebar;
-    }
-
-    .colophon {
-      grid-area: footer;
-    }
-
-	}
-
-  @media screen and (min-width: 1200px) {
-    .site {
-			grid-template-columns: 2fr 1fr 1fr;
-      grid-template-areas:
-        "content-head content-head content-head"
-        "main header header"
-        "main sidebar footer";
-		}
-  }
 }
