--- a/src/components/DeedPanel.scss
+++ b/src/components/DeedPanel.scss
@@ -1,6 +1,7 @@
 @import './../common.scss';
 
 .deed-panel{
+  grid-area: deed;
 }
 
 .deed-nav{
@@ -23,7 +24,7 @@
   // border-radius: 2px;
   color: $fg-color;
   background-color: $deed-bg;
-  box-shadow: 0 0px 2px rgba(127, 127, 127, 1), 0 2px 4px rgba(0,0,0,.12), 0 4px 6px rgba(0,0,0,.24); 
+  box-shadow: 0 0px 2px rgba(127, 127, 127, 1), 0 2px 4px rgba(0,0,0,.12), 0 4px 6px rgba(0,0,0,.24);
 }
 
 .deed-nav-link.active{
@@ -33,18 +34,21 @@
 }
 
 .deed-panel-left{
-    // float:left;
-    margin: 5px;
+  grid-area: nav;
+}
+.deed-panel-right{
+  // float:left;
+  grid-area: details;
+  margin: 5px;
 }
 
 .deed{
-    margin-bottom: 8px;
-    padding: 2px;
-    // border: 2px solid rgb(143, 118, 65);
-    // border-radius: 5px;
-    background-color: rgb(247, 226, 181);
-    box-shadow: 0 0px 2px rgba(127, 127, 127, 1), 0 2px 4px rgba(0,0,0,.12), 0 4px 6px rgba(0,0,0,.24);
-    
+  margin-bottom: 8px;
+  padding: 2px;
+  // border: 2px solid rgb(143, 118, 65);
+  // border-radius: 5px;
+  background-color: rgb(247, 226, 181);
+  box-shadow: 0 0px 2px rgba(127, 127, 127, 1), 0 2px 4px rgba(0,0,0,.12), 0 4px 6px rgba(0,0,0,.24);
 }
 
 .deed.selected{
@@ -54,14 +58,14 @@
 }
 
 .deed-details{
-    // float:left;
-    margin: 5px;
-    padding: 5px;
-    // border-radius: 5px;
-    // border: 2px solid rgb(143, 118, 65);
-    background-color: rgb(247, 226, 181);
-    text-align: left;
-    box-shadow:  0 0 2px rgba(127, 127, 127, 1), 0 2px 4px rgba(0, 0, 0, .12), 0 4px 6px rgba(0, 0, 0, .24);
+  // float:left;
+  margin: 5px;
+  padding: 5px;
+  // border-radius: 5px;
+  // border: 2px solid rgb(143, 118, 65);
+  background-color: rgb(247, 226, 181);
+  text-align: left;
+  box-shadow:  0 0 2px rgba(127, 127, 127, 1), 0 2px 4px rgba(0, 0, 0, .12), 0 4px 6px rgba(0, 0, 0, .24);
 }
 
 .deed-details.completed{
@@ -90,3 +94,15 @@
   bottom: 7px;
 }
 
+@supports (display: grid) {
+  @media screen and (min-width: 800px) {
+
+  	.deed-grid {
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+      grid-template-rows: auto;
+      grid-template-areas:
+        "nav details"
+		}
+	}
+}
