--- a/src/components/LotroApp.css
+++ b/src/components/LotroApp.css
@@ -88,6 +88,20 @@ input[type="file"] {
 .pull-right {
   float: right; }
 
+@supports (display: grid) {
+  @media screen and (min-width: 850px) {
+    .site {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: auto;
+      grid-template-areas: "character summary" "deed deed"; } }
+  @media screen and (min-width: 1080px) {
+    .site {
+      display: grid;
+      grid-template-columns: 1.4fr 1fr;
+      grid-template-rows: auto;
+      grid-template-areas: "character summary" "deed deed"; } } }
+
 .lotro-app {
   text-align: center;
   color: rgba(58, 58, 58, 0.788); }
